# Ballzy

./: CMakeLists.txt
src/: main.c
